--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_hooks: ^0.18.6
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
